Made a nice circle

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <span class="circle-nav-item" id="semi-circ"></span>
     <span class="circle-nav-item" id="qrtr-cric"></span>
   </div>
-  <nav>
+  <nav id="side-nav" class="hidden">
     <a class="side-nav-item">apply for interviews</a>
     <a class="side-nav-item">volunteer</a>
     <a class="side-nav-item">more information</a>
