Hover interactions completed with colour changes

--- a/index.html
+++ b/index.html
@@ -13,18 +13,18 @@
   <div class="main-container">
     <div class="subtitle-container">
       <h1 class="main-title">touchpoint</h1>
-      <h2 id="sub-tickets" class="subtitle">buy tickets<h2>
+      <h2 id="sub-tickets" class="subtitle hidden">buy tickets</h2>
       <h2 id="sub-interviews" class="subtitle hidden">interviews</h2>
       <h2 id="sub-volunteer" class="subtitle hidden">volunteer</h2>
       <h2 id="sub-info" class="subtitle hidden">more info</h2>
     </div>
-    <p id="main-blurb "class="blurb">An interaction design conference for the creative community. Febuary 20, 2020 at the Goldcorp Centre for the Arts. </p>
+    <p id="main-blurb" class="blurb">An interaction design conference for the creative community. Febuary 20, 2020 at the Goldcorp Centre for the Arts. </p>
     <div class="shape-contain">
       <svg class="shape" version="1.1" viewBox="0 0 480 480" preserveAspectRatio="xMinYMin meet">
         <circle id="full-circ" cx="222.639" cy="218.102" r="218.102" />
         <path id="pacman" d="M410.331 219.847C410.331 323.094 326.633 406.792 223.386 406.792C120.139 406.792 36.4414 323.094 36.4414 219.847C36.4414 116.6 120.139 32.9023 223.386 32.9023V219.847H410.331Z" fill="#005EB8"/>
-        <path id="semi-circ" d="M331.468 328.096C270.629 388.935 171.99 388.935 111.151 328.096C50.3125 267.257 50.3125 168.618 111.151 107.779L221.31 217.938L331.468 328.096Z" fill="#DB3EB1"/>
-        <path id="qrtr-circ" d="M223.345 219.874C154.514 219.874 98.7148 219.874 98.7148 219.874C98.7148 288.705 154.514 344.504 223.345 344.504C223.345 344.504 223.345 288.705 223.345 219.874Z" fill="#FF6720"/>
+        <path id="semi-circ" d="M331.468 328.096C270.629 388.935 171.99 388.935 111.151 328.096C50.3125 267.257 50.3125 168.618 111.151 107.779L221.31 217.938L331.468 328.096Z"/>
+        <path id="qrtr-circ" d="M223.345 219.874C154.514 219.874 98.7148 219.874 98.7148 219.874C98.7148 288.705 154.514 344.504 223.345 344.504C223.345 344.504 223.345 288.705 223.345 219.874Z"/>
       </svg>
     </div>
   <div>
@@ -37,9 +37,6 @@
     <span class="side-nav-item" id="nav-icon"></span>
   </nav>
 
-
-
-  <script src="js/vendor/modernizr-3.8.0.min.js"></script>
   <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
   <script>window.jQuery || document.write('<script src="js/vendor/jquery-3.4.1.min.js"><\/script>')</script>
   <script src="js/main.js"></script>
