Structure and rudimentry css for speakers list

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-  <div class="main-container">
+  <section class="main-container">
     <div class="subtitle-container">
       <h1 class="main-title">touchpoint</h1>
       <h2 id="sub-tickets" class="subtitle hidden">buy tickets</h2>
@@ -27,18 +27,58 @@
         <path id="qrtr-circ" d="M223.345 219.874C154.514 219.874 98.7148 219.874 98.7148 219.874C98.7148 288.705 154.514 344.504 223.345 344.504C223.345 344.504 223.345 288.705 223.345 219.874Z"/>
       </svg>
     </div>
-  <div>
+  </section>
 
-  <nav id="side-nav" class="hidden">
-    <a class="side-nav-item">apply for interviews</a>
-    <a class="side-nav-item">volunteer</a>
-    <a class="side-nav-item">more information</a>
-    <a class="side-nav-item">2019 site</a>
-    <span class="side-nav-item" id="nav-icon"></span>
-  </nav>
+  <section class="speakers-container">
+    <nav id="side-nav" class="hidden">
+      <a class="side-nav-item">apply for interviews</a>
+      <a class="side-nav-item">volunteer</a>
+      <a class="side-nav-item">more information</a>
+      <a class="side-nav-item">2019 site</a>
+      <span class="side-nav-item" id="nav-icon"></span>
+    </nav>
+    <div class="speaker-list">
+      <div id="dossier" class="speaker">
+        <h2>Cherihan Hassun</h2>
+        <p>Dossier & The Railyard Lab</p>
+      </div>
+      <div id="engine" class="speaker">
+        <h2>Peter Pimental</h2>
+        <p>Engine Digital & Customer Satisfaction</p>
+      </div>
+      <div id="google" class="speaker">
+        <h2>Jeremy Beasley</h2>
+        <p>Google Cloud</p>
+      </div>
+      <div id="invoke" class="speaker">
+        <h2>Colin Sharp</h2>
+        <p>Invoke</p>
+      </div>
+      <div id="allpurpose" class="speaker">
+        <h2>Lina Manro</h2>
+        <p>All Purpose</p>
+      </div>
+      <div id="everyday" class="speaker">
+        <h2>Will Odom</h2>
+        <p>Every Day Design</p>
+      </div>
+    </div>
+
+    <!-- <div class="portrait-section">
+      <img></img>
+      <img></img>
+      <img></img>
+      <img></img>
+      <img></img>
+      <img></img>
+    </div> -->
+
+  </section>
 
   <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
   <script>window.jQuery || document.write('<script src="js/vendor/jquery-3.4.1.min.js"><\/script>')</script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/ScrollMagic.min.js"></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/plugins/debug.addIndicators.min.js"></script>
   <script src="js/main.js"></script>
   <!-- Google Analytics: TODO change UA-XXXXX-Y to be your site's ID. -->
   <script>
