Text rotation working, need to fix container box

--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
       <a class="side-nav-item">2019 site</a>
       <span class="side-nav-item" id="nav-icon"></span>
     </nav>
-    <div class="speaker-list">
+    <div class="speaker-list-wrapper">
+      <p class="featured-subheader">Featured Speakers</p>
       <div id="dossier" class="speaker">
         <h2>Cherihan Hassun</h2>
         <p>Dossier & The Railyard Lab</p>
@@ -59,11 +60,10 @@
         <p>All Purpose</p>
       </div>
       <div id="everyday" class="speaker">
-        <h2>Will Odom</h2>
-        <p>Every Day Design</p>
+        <h2>Every Day Design</h2>
+        <p>Will Odom</p>
       </div>
     </div>
-
     <!-- <div class="portrait-section">
       <img></img>
       <img></img>
@@ -72,7 +72,6 @@
       <img></img>
       <img></img>
     </div> -->
-
   </section>
 
   <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
