Responsive vertical alignment text, fixed columns on page

--- a/index.html
+++ b/index.html
@@ -30,38 +30,38 @@
   </section>
 
   <section class="speakers-container">
-    <nav id="side-nav" class="hidden">
+    <!-- <nav id="side-nav" class="hidden">
       <a class="side-nav-item">apply for interviews</a>
       <a class="side-nav-item">volunteer</a>
       <a class="side-nav-item">more information</a>
       <a class="side-nav-item">2019 site</a>
       <span class="side-nav-item" id="nav-icon"></span>
-    </nav>
+    </nav> -->
     <div class="speaker-list-wrapper">
-      <p class="featured-subheader">Featured Speakers</p>
+      <!-- <p class="featured-subheader">Featured Speakers</p> -->
       <div id="dossier" class="speaker">
-        <h2>Cherihan Hassun</h2>
         <p>Dossier & The Railyard Lab</p>
+        <h2>Cherihan Hassun</h2>
       </div>
       <div id="engine" class="speaker">
-        <h2>Peter Pimental</h2>
         <p>Engine Digital & Customer Satisfaction</p>
+        <h2>Peter Pimental</h2>
       </div>
       <div id="google" class="speaker">
-        <h2>Jeremy Beasley</h2>
         <p>Google Cloud</p>
+        <h2>Jeremy Beasley</h2>
       </div>
       <div id="invoke" class="speaker">
-        <h2>Colin Sharp</h2>
         <p>Invoke</p>
+        <h2>Colin Sharp</h2>
       </div>
       <div id="allpurpose" class="speaker">
-        <h2>Lina Manro</h2>
         <p>All Purpose</p>
+        <h2>Lina Manro</h2>
       </div>
       <div id="everyday" class="speaker">
-        <h2>Every Day Design</h2>
         <p>Will Odom</p>
+        <h2>Every Day Design</h2>
       </div>
     </div>
     <!-- <div class="portrait-section">
