--- a/index.html
+++ b/index.html
@@ -19,15 +19,20 @@
       <h2 id="sub-info" class="subtitle hidden">more info</h2>
     </div>
     <p id="main-blurb" class="blurb">An interaction design conference for the creative community. Febuary 20, 2020 at the Goldcorp Centre for the Arts. </p>
+
     <div class="shape-contain">
       <svg class="shape" version="1.1" viewBox="0 0 480 480" preserveAspectRatio="xMinYMin meet">
-        <circle id="full-circ" cx="222.639" cy="218.102" r="218.102" />
-        <path id="pacman" d="M410.331 219.847C410.331 323.094 326.633 406.792 223.386 406.792C120.139 406.792 36.4414 323.094 36.4414 219.847C36.4414 116.6 120.139 32.9023 223.386 32.9023V219.847H410.331Z" fill="#005EB8"/>
-        <path id="semi-circ" d="M331.468 328.096C270.629 388.935 171.99 388.935 111.151 328.096C50.3125 267.257 50.3125 168.618 111.151 107.779L221.31 217.938L331.468 328.096Z"/>
+        <a href="https://www.eventbrite.ca/e/89368129481"<circle id="full-circ" cx="222.639" cy="218.102" r="218.102"/></a>
+        <a href="https://docs.google.com/forms/d/e/1FAIpQLScTnjmhiPPO_V5RZoXSu8_e5GRSoG_lKbrxc8hybZKyq6aYZQ/viewform" target="_blank"><path id="pacman" d="M410.331 219.847C410.331 323.094 326.633 406.792 223.386 406.792C120.139 406.792 36.4414 323.094 36.4414 219.847C36.4414 116.6 120.139 32.9023 223.386 32.9023V219.847H410.331Z" fill="#005EB8"/></a>
+        <a href="https://docs.google.com/forms/d/e/1FAIpQLSepggWRi8262IkSaqQ_0UAD30Jsma5WVwYOszTFH6cb2PujkQ/viewform" target="_blank"><path id="semi-circ" d="M331.468 328.096C270.629 388.935 171.99 388.935 111.151 328.096C50.3125 267.257 50.3125 168.618 111.151 107.779L221.31 217.938L331.468 328.096Z"/></a>
         <path id="qrtr-circ" d="M223.345 219.874C154.514 219.874 98.7148 219.874 98.7148 219.874C98.7148 288.705 154.514 344.504 223.345 344.504C223.345 344.504 223.345 288.705 223.345 219.874Z"/>
       </svg>
     </div>
+    <!-- <svg id="arrow" viewBox="0 0 480 480" preserveAspectRatio="xMidYMax" fill="none" xmlns="http://www.w3.org/2000/svg">
+      <path class="arrow-path" d="M39.7369 59.1621L55.1678 45.134L56.1248 44.264H54.8315H0.5V27.6461H54.7416H56.0409L55.0768 26.775L39.6482 12.8368L51.8644 0.705438L87.2021 35.9551L51.8644 71.2047L39.7369 59.1621Z" stroke="#222222"/>
+    </svg> -->
   </section>
+
 
   <section class="speakers-container">
     <!-- <nav id="side-nav" class="hidden">
@@ -69,8 +74,9 @@
 
   <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
   <script>window.jQuery || document.write('<script src="js/vendor/jquery-3.4.1.min.js"><\/script>')</script>
-  <script src="http://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/ScrollMagic.min.js"></script>
-  <script src="http://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/plugins/debug.addIndicators.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.1.1/gsap.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.1.1/ScrollToPlugin.min.js"></script>
+  <!-- <script src="http://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/ScrollMagic.min.js"></script> -->
   <script src="js/main.js"></script>
   <!-- Google Analytics: TODO change UA-XXXXX-Y to be your site's ID. -->
   <script>
