Missing a closing tag

--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
 
     <div class="shape-contain">
       <svg class="shape" version="1.1" viewBox="0 0 480 480" preserveAspectRatio="xMinYMin meet">
-        <a href="https://www.eventbrite.ca/e/89368129481"<circle id="full-circ" cx="222.639" cy="218.102" r="218.102"/></a>
+        <a href="https://www.eventbrite.ca/e/89368129481"><circle id="full-circ" cx="222.639" cy="218.102" r="218.102"/></a>
         <a href="https://docs.google.com/forms/d/e/1FAIpQLScTnjmhiPPO_V5RZoXSu8_e5GRSoG_lKbrxc8hybZKyq6aYZQ/viewform" target="_blank"><path id="pacman" d="M410.331 219.847C410.331 323.094 326.633 406.792 223.386 406.792C120.139 406.792 36.4414 323.094 36.4414 219.847C36.4414 116.6 120.139 32.9023 223.386 32.9023V219.847H410.331Z" fill="#005EB8"/></a>
-        <a href="https://docs.google.com/forms/d/e/1FAIpQLSepggWRi8262IkSaqQ_0UAD30Jsma5WVwYOszTFH6cb2PujkQ/viewform" target="_blank"><path id="semi-circ" d="M331.468 328.096C270.629 388.935 171.99 388.935 111.151 328.096C50.3125 267.257 50.3125 168.618 111.151 107.779L221.31 217.938L331.468 328.096Z"/></a>
+        <a href="https://docs.google.com/forms/d/1lM9HcAlzYjvlEemEZtBmvGyXiEgek7V0r4z0nUF-Ppw" target="_blank"><path id="semi-circ" d="M331.468 328.096C270.629 388.935 171.99 388.935 111.151 328.096C50.3125 267.257 50.3125 168.618 111.151 107.779L221.31 217.938L331.468 328.096Z"/></a>
         <path id="qrtr-circ" d="M223.345 219.874C154.514 219.874 98.7148 219.874 98.7148 219.874C98.7148 288.705 154.514 344.504 223.345 344.504C223.345 344.504 223.345 288.705 223.345 219.874Z"/>
       </svg>
     </div>
