Mobile navigation added

--- a/index.html
+++ b/index.html
@@ -32,9 +32,10 @@
     <!-- <svg id="arrow" viewBox="0 0 480 480" preserveAspectRatio="xMidYMax" fill="none" xmlns="http://www.w3.org/2000/svg">
       <path class="arrow-path" d="M39.7369 59.1621L55.1678 45.134L56.1248 44.264H54.8315H0.5V27.6461H54.7416H56.0409L55.0768 26.775L39.6482 12.8368L51.8644 0.705438L87.2021 35.9551L51.8644 71.2047L39.7369 59.1621Z" stroke="#222222"/>
     </svg> -->
-    <nav class="mobile-nav hidden">
+    <nav id="mobile-nav">
       <a href="https://www.eventbrite.ca/e/89368129481">Tickets</a>
       <a href="https://docs.google.com/forms/d/e/1FAIpQLScTnjmhiPPO_V5RZoXSu8_e5GRSoG_lKbrxc8hybZKyq6aYZQ/viewform">Interviews</a>
+      <a href="https://docs.google.com/forms/d/1lM9HcAlzYjvlEemEZtBmvGyXiEgek7V0r4z0nUF-Ppw">Volunteer</a>
     </nav>
   </section>
 
