Completed mobile and web responsive and removed a tag borders

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <h2 id="sub-tickets" class="subtitle hidden">buy tickets</h2>
       <h2 id="sub-interviews" class="subtitle hidden">interviews</h2>
       <h2 id="sub-volunteer" class="subtitle hidden">volunteer</h2>
-      <h2 id="sub-info" class="subtitle hidden">more info soon</h2>
+      <h2 id="sub-info" class="subtitle hidden">more soon</h2>
     </div>
     <p id="main-blurb" class="blurb">An interaction design conference for the creative community. February 20, 2020 at the Goldcorp Centre for the Arts. </p>
 
@@ -38,43 +38,6 @@
       <a href="https://docs.google.com/forms/d/1lM9HcAlzYjvlEemEZtBmvGyXiEgek7V0r4z0nUF-Ppw"><p>Volunteer</p></a>
     </nav>
   </section>
-
-  <!-- <section class="speakers-container">
-    <nav id="side-nav" class="hidden">
-      <a class="side-nav-item">apply for interviews</a>
-      <a class="side-nav-item">volunteer</a>
-      <a class="side-nav-item">more information</a>
-      <a class="side-nav-item">2019 site</a>
-      <span class="side-nav-item" id="nav-icon"></span>
-    </nav>
-    <div class="speaker-list-wrapper">
-      <p class="featured-subheader">Featured Speakers</p>
-      <div id="dossier" class="speaker-box">
-        <p class="subtitle">Dossier & The Railyard Lab</p>
-        <h2 class="title">Cherihan Hassun</h2>
-      </div>
-      <div id="engine" class="speaker-box">
-        <p class="subtitle">Engine Digital & Customer Satisfaction</p>
-        <h2 class="title">Peter Pimental</h2>
-      </div>
-      <div id="google" class="speaker-box">
-        <p class="subtitle">Google Cloud</p>
-        <h2 class="title">Jeremy Beasley</h2>
-      </div>
-      <div id="invoke" class="speaker-box">
-        <p class="subtitle">Invoke</p>
-        <h2 class="title">Colin Sharp</h2>
-      </div>
-      <div id="allpurpose" class="speaker-box">
-        <p class="subtitle">All Purpose</p>
-        <h2 class="title">Lina Manro</h2>
-      </div>
-      <div id="everyday" class="speaker-box">
-        <p class="subtitle">Will Odom</p>
-        <h2 class="title">Every Day Design</h2>
-      </div>
-    </div>
-  </section> -->
 
   <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
   <script>window.jQuery || document.write('<script src="js/vendor/jquery-3.4.1.min.js"><\/script>')</script>
