--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div class="shape-contain">
       <svg class="shape" version="1.1" viewBox="0 0 480 480" preserveAspectRatio="xMinYMin meet">
         <a href="https://www.eventbrite.ca/e/touchpoint-2020-tickets-89368129481" target="_blank"><circle id="full-circ" class="shapepath" cx="222.639" cy="218.102" r="218.102"/></a>
-        <a href="https://forms.gle/95F5JECNL45Rca4H7" target="_blank"><path id="pacman" class="shapepath" d="M410.331 219.847C410.331 323.094 326.633 406.792 223.386 406.792C120.139 406.792 36.4414 323.094 36.4414 219.847C36.4414 116.6 120.139 32.9023 223.386 32.9023V219.847H410.331Z" fill="#005EB8"/></a>
+        <a href="https://forms.gle/kKdhqi6xTmbbQiF88" target="_blank"><path id="pacman" class="shapepath" d="M410.331 219.847C410.331 323.094 326.633 406.792 223.386 406.792C120.139 406.792 36.4414 323.094 36.4414 219.847C36.4414 116.6 120.139 32.9023 223.386 32.9023V219.847H410.331Z" fill="#005EB8"/></a>
         <a href="https://docs.google.com/forms/d/1lM9HcAlzYjvlEemEZtBmvGyXiEgek7V0r4z0nUF-Ppw" target="_blank"><path id="semi-circ" class="shapepath" d="M331.468 328.096C270.629 388.935 171.99 388.935 111.151 328.096C50.3125 267.257 50.3125 168.618 111.151 107.779L221.31 217.938L331.468 328.096Z"/></a>
         <path id="qrtr-circ" class="shapepath" d="M223.345 219.874C154.514 219.874 98.7148 219.874 98.7148 219.874C98.7148 288.705 154.514 344.504 223.345 344.504C223.345 344.504 223.345 288.705 223.345 219.874Z"/>
       </svg>
@@ -33,7 +33,7 @@
     </svg> -->
     <nav id="mobile-nav">
       <a href="https://www.eventbrite.ca/e/touchpoint-2020-tickets-89368129481"><p>Tickets</p></a>
-      <a href="https://forms.gle/95F5JECNL45Rca4H7"><p>Interview</p></a>
+      <a href="https://forms.gle/kKdhqi6xTmbbQiF88"><p>Interviews</p></a>
       <a href="https://docs.google.com/forms/d/1lM9HcAlzYjvlEemEZtBmvGyXiEgek7V0r4z0nUF-Ppw"><p>Volunteer</p></a>
     </nav>
   </section>
