--- a/index.html
+++ b/index.html
@@ -10,33 +10,75 @@
 </head>
 
 <body>
-  <section class="main-container">
-    <div class="subtitle-container">
-      <h1 class="main-title">touchpoint</h1>
-      <h2 id="sub-tickets" class="subtitle hidden">buy tickets</h2>
-      <h2 id="sub-interviews" class="subtitle hidden">interviews</h2>
-      <h2 id="sub-volunteer" class="subtitle hidden">volunteer</h2>
-      <h2 id="sub-info" class="subtitle hidden">more soon</h2>
-    </div>
-    <p id="main-blurb" class="blurb">An interaction design conference for the creative community. February 20, 2020 at the Goldcorp Centre for the Arts. </p>
+  <div id="main-wrapper" class="main-container">
+    <div class="sections" id="slide-container">
+      <section class="splash-container">
+        <div class="subtitle-container">
+          <h1 class="main-title">touchpoint</h1>
+          <h2 id="sub-tickets" class="subtitle hidden">buy tickets</h2>
+          <h2 id="sub-interviews" class="subtitle hidden">interviews</h2>
+          <h2 id="sub-volunteer" class="subtitle hidden">volunteer</h2>
+          <h2 id="sub-info" class="subtitle hidden">more soon</h2>
+        </div>
+        <p id="main-blurb" class="blurb">An interaction design conference for the creative community. February 20, 2020 at the Goldcorp Centre for the Arts. </p>
 
-    <div class="shape-contain">
-      <svg class="shape" version="1.1" viewBox="0 0 480 480" preserveAspectRatio="xMinYMin meet">
-        <a href="https://www.eventbrite.ca/e/touchpoint-2020-tickets-89368129481" target="_blank"><circle id="full-circ" class="shapepath" cx="222.639" cy="218.102" r="218.102"/></a>
-        <a href="https://forms.gle/kKdhqi6xTmbbQiF88" target="_blank"><path id="pacman" class="shapepath" d="M410.331 219.847C410.331 323.094 326.633 406.792 223.386 406.792C120.139 406.792 36.4414 323.094 36.4414 219.847C36.4414 116.6 120.139 32.9023 223.386 32.9023V219.847H410.331Z" fill="#005EB8"/></a>
-        <a href="https://docs.google.com/forms/d/1lM9HcAlzYjvlEemEZtBmvGyXiEgek7V0r4z0nUF-Ppw" target="_blank"><path id="semi-circ" class="shapepath" d="M331.468 328.096C270.629 388.935 171.99 388.935 111.151 328.096C50.3125 267.257 50.3125 168.618 111.151 107.779L221.31 217.938L331.468 328.096Z"/></a>
-        <path id="qrtr-circ" class="shapepath" d="M223.345 219.874C154.514 219.874 98.7148 219.874 98.7148 219.874C98.7148 288.705 154.514 344.504 223.345 344.504C223.345 344.504 223.345 288.705 223.345 219.874Z"/>
-      </svg>
+        <div class="shape-contain">
+          <svg class="shape" version="1.1" viewBox="0 0 480 480" preserveAspectRatio="xMinYMin meet">
+            <a href="https://www.eventbrite.ca/e/touchpoint-2020-tickets-89368129481" target="_blank"><circle id="full-circ" class="shapepath" cx="222.639" cy="218.102" r="218.102"/></a>
+            <a href="https://forms.gle/kKdhqi6xTmbbQiF88" target="_blank"><path id="pacman" class="shapepath" d="M410.331 219.847C410.331 323.094 326.633 406.792 223.386 406.792C120.139 406.792 36.4414 323.094 36.4414 219.847C36.4414 116.6 120.139 32.9023 223.386 32.9023V219.847H410.331Z" fill="#005EB8"/></a>
+            <a href="https://docs.google.com/forms/d/1lM9HcAlzYjvlEemEZtBmvGyXiEgek7V0r4z0nUF-Ppw" target="_blank"><path id="semi-circ" class="shapepath" d="M331.468 328.096C270.629 388.935 171.99 388.935 111.151 328.096C50.3125 267.257 50.3125 168.618 111.151 107.779L221.31 217.938L331.468 328.096Z"/></a>
+            <path id="qrtr-circ" class="shapepath" d="M223.345 219.874C154.514 219.874 98.7148 219.874 98.7148 219.874C98.7148 288.705 154.514 344.504 223.345 344.504C223.345 344.504 223.345 288.705 223.345 219.874Z"/>
+          </svg>
+        </div>
+        <!-- <svg id="arrow" viewBox="0 0 480 480" preserveAspectRatio="xMidYMax" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <path class="arrow-path" d="M39.7369 59.1621L55.1678 45.134L56.1248 44.264H54.8315H0.5V27.6461H54.7416H56.0409L55.0768 26.775L39.6482 12.8368L51.8644 0.705438L87.2021 35.9551L51.8644 71.2047L39.7369 59.1621Z" stroke="#222222"/>
+        </svg> -->
+        <nav id="mobile-nav">
+          <a href="https://www.eventbrite.ca/e/touchpoint-2020-tickets-89368129481"><p>Tickets</p></a>
+          <a href="https://forms.gle/kKdhqi6xTmbbQiF88"><p>Interviews</p></a>
+          <a href="https://docs.google.com/forms/d/1lM9HcAlzYjvlEemEZtBmvGyXiEgek7V0r4z0nUF-Ppw"><p>Volunteer</p></a>
+        </nav>
+      </section>
+
+      <section class="speakers-container">
+        <nav id="side-nav" class="hidden">
+          <a class="side-nav-item">apply for interviews</a>
+          <a class="side-nav-item">volunteer</a>
+          <a class="side-nav-item">more information</a>
+          <a class="side-nav-item">2019 site</a>
+          <span class="side-nav-item" id="nav-icon"></span>
+        </nav>
+        <div class="speaker-list-wrapper">
+          <p class="featured-subheader">Featured Speakers</p>
+          <div id="dossier" class="speaker-box">
+            <p class="subtitle">Dossier & The Railyard Lab</p>
+            <h2 class="title">Cherihan Hassun</h2>
+          </div>
+          <div id="engine" class="speaker-box">
+            <p class="subtitle">Engine Digital</p>
+            <h2 class="title">Peter Pimental</h2>
+          </div>
+          <div id="google" class="speaker-box">
+            <p class="subtitle">Telus International</p>
+            <h2 class="title">Ed Prinsen</h2>
+          </div>
+          <div id="invoke" class="speaker-box">
+            <p class="subtitle">Asana</p>
+            <h2 class="title">Amy Ngai</h2>
+          </div>
+          <div id="allpurpose" class="speaker-box">
+            <p class="subtitle">All Purpose</p>
+            <h2 class="title">Lina Manro</h2>
+          </div>
+          <div id="everyday" class="speaker-box">
+            <p class="subtitle">Everyday Design Studio</p>
+            <h2 class="title">Will Odom</h2>
+          </div>
+        </div>
+      </section>
     </div>
-    <!-- <svg id="arrow" viewBox="0 0 480 480" preserveAspectRatio="xMidYMax" fill="none" xmlns="http://www.w3.org/2000/svg">
-      <path class="arrow-path" d="M39.7369 59.1621L55.1678 45.134L56.1248 44.264H54.8315H0.5V27.6461H54.7416H56.0409L55.0768 26.775L39.6482 12.8368L51.8644 0.705438L87.2021 35.9551L51.8644 71.2047L39.7369 59.1621Z" stroke="#222222"/>
-    </svg> -->
-    <nav id="mobile-nav">
-      <a href="https://www.eventbrite.ca/e/touchpoint-2020-tickets-89368129481"><p>Tickets</p></a>
-      <a href="https://forms.gle/kKdhqi6xTmbbQiF88"><p>Interviews</p></a>
-      <a href="https://docs.google.com/forms/d/1lM9HcAlzYjvlEemEZtBmvGyXiEgek7V0r4z0nUF-Ppw"><p>Volunteer</p></a>
-    </nav>
-  </section>
+  </div>
+
 
   <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
   <script>window.jQuery || document.write('<script src="js/vendor/jquery-3.4.1.min.js"><\/script>')</script>
