--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 
 <body>
   <div id="main-wrapper" class="main-container">
-    <div class="sections" id="slide-container">
-      <section class="splash-container">
+    <div class="sections" id="js-container">
+      <section class="splash-container section">
         <div class="subtitle-container">
           <h1 class="main-title">touchpoint</h1>
           <h2 id="sub-tickets" class="subtitle hidden">buy tickets</h2>
@@ -40,7 +40,7 @@
         </nav>
       </section>
 
-      <section class="speakers-container">
+      <section class="speakers-container section">
         <nav id="side-nav" class="hidden">
           <a class="side-nav-item">apply for interviews</a>
           <a class="side-nav-item">volunteer</a>
@@ -84,7 +84,9 @@
   <script>window.jQuery || document.write('<script src="js/vendor/jquery-3.4.1.min.js"><\/script>')</script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.1.1/gsap.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.1.1/ScrollToPlugin.min.js"></script>
-  <!-- <script src="http://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/ScrollMagic.min.js"></script> -->
+  <script src="http://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/ScrollMagic.min.js"></script>
+  <script src="http://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/plugins/animation.gsap.js"></script>
+  <scrip src="http://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/plugins/debug.addIndicators.js"></script>
   <script src="js/main.js"></script>
   <!-- Google Analytics: TODO change UA-XXXXX-Y to be your site's ID. -->
   <script>
