Hover interactions for img/logos complete - placeholder img. Mobile WIP

--- a/index.html
+++ b/index.html
@@ -51,29 +51,37 @@
         <div class="speaker-list-wrapper">
           <p class="featured-subheader">Featured Speakers</p>
           <div id="dossier" class="speaker-box">
-            <p class="subtitle">Dossier & The Railyard Lab</p>
-            <h2 class="title">Cherihan Hassun</h2>
+            <p class="subtitle">Cherihan Hassun & Ronna Chisholm</p>
+            <h2 class="title">Dossier & Railyard Lab</h2>
           </div>
           <div id="engine" class="speaker-box">
-            <p class="subtitle">Engine Digital</p>
-            <h2 class="title">Peter Pimental</h2>
+            <p class="subtitle">Peter Pimental</p>
+            <h2 class="title">Engine Digital</h2>
           </div>
-          <div id="google" class="speaker-box">
-            <p class="subtitle">Telus International</p>
-            <h2 class="title">Ed Prinsen</h2>
+          <div id="telus" class="speaker-box">
+            <p class="subtitle">Guramrit Singh & Ed Prinsen</p>
+            <h2 class="title">Telus Digital</h2>
           </div>
-          <div id="invoke" class="speaker-box">
-            <p class="subtitle">Asana</p>
-            <h2 class="title">Amy Ngai</h2>
+          <div id="asana" class="speaker-box">
+            <p class="subtitle">Amy Ngai</p>
+            <h2 class="title">Asana</h2>
           </div>
           <div id="allpurpose" class="speaker-box">
-            <p class="subtitle">All Purpose</p>
-            <h2 class="title">Lina Manro</h2>
+            <p class="subtitle">Edwy Woo, Elan Asselstine, & Hugh Knapp</p>
+            <h2 class="title">All Purpose Studio</h2>
           </div>
           <div id="everyday" class="speaker-box">
-            <p class="subtitle">Everyday Design Studio</p>
-            <h2 class="title">Will Odom</h2>
+            <p class="subtitle">Will Odom</p>
+            <h2 class="title">Everyday Design Studio</h2>
           </div>
+        </div>
+        <div class="photo-area">
+          <div id="dossier-img" class="hidden speaker-img"></div>
+          <div id="engine-img" class="hidden speaker-img"></div>
+          <div id="telus-img" class="hidden speaker-img"></div>
+          <div id="asana-img" class="hidden speaker-img"></div>
+          <div id="allpurpose-img" class="hidden speaker-img"></div>
+          <div id="everyday-img" class="hidden speaker-img"></div>
         </div>
       </section>
     </div>
