Logo appear, responsive to mobile

--- a/index.html
+++ b/index.html
@@ -76,12 +76,12 @@
           </div>
         </div>
         <div class="photo-area">
-          <div id="dossier-img" class="hidden speaker-img"></div>
-          <div id="engine-img" class="hidden speaker-img"></div>
-          <div id="telus-img" class="hidden speaker-img"></div>
-          <div id="asana-img" class="hidden speaker-img"></div>
-          <div id="allpurpose-img" class="hidden speaker-img"></div>
-          <div id="everyday-img" class="hidden speaker-img"></div>
+          <img class="hidden speaker-img dossier-img" src="assets/imgs/Dossier.png"></img>
+          <img class="hidden speaker-img engine-img" src="assets/imgs/engine.png"></img>
+          <img class="hidden speaker-img telus-img" src="assets/imgs/telus.png"></img>
+          <img class="hidden speaker-img asana-img" src="assets/imgs/Asana.png"></img>
+          <img class="hidden speaker-img allpurpose-img" src="assets/imgs/allpurpose.png"></img>
+          <img class="hidden speaker-img everyday-img" src="assets/imgs/everday.jpg"></img>
         </div>
       </section>
     </div>
