Side-nav basic functionality added

--- a/index.html
+++ b/index.html
@@ -41,12 +41,19 @@
       </section>
 
       <section class="speakers-container section">
-        <nav id="side-nav" class="hidden">
-          <a class="side-nav-item">apply for interviews</a>
-          <a class="side-nav-item">volunteer</a>
-          <a class="side-nav-item">more information</a>
-          <a class="side-nav-item">2019 site</a>
-          <span class="side-nav-item" id="nav-icon"></span>
+        <nav class="ws-side-nav">
+          <a href="https://www.eventbrite.ca/e/touchpoint-2020-tickets-89368129481" class="side-nav-item">purchase tickets</a>
+          <a href="https://forms.gle/kKdhqi6xTmbbQiF88" class="side-nav-item">apply for interviews</a>
+          <a href="https://docs.google.com/forms/d/1lM9HcAlzYjvlEemEZtBmvGyXiEgek7V0r4z0nUF-Ppw" class="side-nav-item">volunteer</a>
+          <a href="https://www.sfu.ca/idc/2019/"class="side-nav-item">2019 site</a>
+          <span class="side-nav-item" id="nav-icon">
+            <svg width="33" height="32" viewBox="0 0 33 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <circle cx="16.184" cy="15.9252" r="15.9252" fill="#0093DA"/>
+              <path d="M29.8887 16.0525C29.8887 23.5913 23.7773 29.7026 16.2385 29.7026C8.69976 29.7026 2.58838 23.5913 2.58838 16.0525C2.58838 8.51372 8.69976 2.40234 16.2385 2.40234V16.0525H29.8887Z" fill="#005EB8"/>
+              <path d="M24.1303 23.957C19.688 28.3992 12.4857 28.3992 8.04345 23.957C3.60119 19.5147 3.60119 12.3124 8.04345 7.87013L16.0869 15.9135L24.1303 23.957Z" fill="#DB3EB1"/>
+              <path d="M16.2354 16.0542C11.2095 16.0542 7.13525 16.0542 7.13525 16.0542C7.13525 21.08 11.2095 25.1543 16.2354 25.1543C16.2354 25.1543 16.2354 21.08 16.2354 16.0542Z" fill="#FF6720"/>
+            </svg>
+          </span>
         </nav>
         <div class="speaker-list-wrapper">
           <p class="featured-subheader">Featured Speakers</p>
