Replaced everday design studio logo

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
           <img class="hidden speaker-img telus-img" src="assets/imgs/telus.png"></img>
           <img class="hidden speaker-img asana-img" src="assets/imgs/Asana.png"></img>
           <img class="hidden speaker-img allpurpose-img" src="assets/imgs/allpurpose.png"></img>
-          <img class="hidden speaker-img everyday-img" src="assets/imgs/everday.jpg"></img>
+          <img class="hidden speaker-img everyday-img" src="assets/imgs/eds.png"></img>
         </div>
       </section>
     </div>
