Specific enter and exit functions fixed previous bug with hovers

--- a/index.html
+++ b/index.html
@@ -15,10 +15,7 @@
       <section class="splash-container section">
         <div class="subtitle-container">
           <h1 class="main-title">touchpoint</h1>
-          <h2 id="sub-tickets" class="subtitle hidden">buy tickets</h2>
-          <h2 id="sub-interviews" class="subtitle hidden">interviews</h2>
-          <h2 id="sub-volunteer" class="subtitle hidden">volunteer</h2>
-          <h2 id="sub-info" class="subtitle hidden">more soon</h2>
+          <h2 id="sub-header" class="subtitle hidden"></h2>
         </div>
         <p id="main-blurb" class="blurb">An interaction design conference for the creative community. February 20, 2020 at the Goldcorp Centre for the Arts. </p>
 
