--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
             <path id="qrtr-circ" class="shapepath" d="M223.345 219.874C154.514 219.874 98.7148 219.874 98.7148 219.874C98.7148 288.705 154.514 344.504 223.345 344.504C223.345 344.504 223.345 288.705 223.345 219.874Z"/>
           </svg>
         </div>
-        <!-- <svg id="arrow" viewBox="0 0 480 480" preserveAspectRatio="xMidYMax" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <svg id="arrow" viewBox="0 0 480 480" preserveAspectRatio="xMidYMax" fill="none" xmlns="http://www.w3.org/2000/svg">
           <path class="arrow-path" d="M39.7369 59.1621L55.1678 45.134L56.1248 44.264H54.8315H0.5V27.6461H54.7416H56.0409L55.0768 26.775L39.6482 12.8368L51.8644 0.705438L87.2021 35.9551L51.8644 71.2047L39.7369 59.1621Z" stroke="#222222"/>
-        </svg> -->
+        </svg>
         <nav id="mobile-nav">
           <a href="https://www.eventbrite.ca/e/touchpoint-2020-tickets-89368129481"><p>Tickets</p></a>
           <a href="https://forms.gle/kKdhqi6xTmbbQiF88"><p>Interviews</p></a>
