--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
             <path id="qrtr-circ" class="shapepath" d="M223.345 219.874C154.514 219.874 98.7148 219.874 98.7148 219.874C98.7148 288.705 154.514 344.504 223.345 344.504C223.345 344.504 223.345 288.705 223.345 219.874Z"/>
           </svg>
         </div>
-        <svg id="arrow" viewBox="0 0 480 480" preserveAspectRatio="xMidYMax" fill="none" xmlns="http://www.w3.org/2000/svg">
-          <path class="arrow-path" d="M39.7369 59.1621L55.1678 45.134L56.1248 44.264H54.8315H0.5V27.6461H54.7416H56.0409L55.0768 26.775L39.6482 12.8368L51.8644 0.705438L87.2021 35.9551L51.8644 71.2047L39.7369 59.1621Z" stroke="#222222"/>
+        <svg id="arrowhold" viewBox="0 0 480 480" preserveAspectRatio="xMidYMax" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <path id="arrow" class="arrow-path" d="M39.7369 59.1621L55.1678 45.134L56.1248 44.264H54.8315H0.5V27.6461H54.7416H56.0409L55.0768 26.775L39.6482 12.8368L51.8644 0.705438L87.2021 35.9551L51.8644 71.2047L39.7369 59.1621Z" stroke="#222222"/>
         </svg>
         <nav id="mobile-nav">
           <a href="https://www.eventbrite.ca/e/touchpoint-2020-tickets-89368129481"><p>Tickets</p></a>
@@ -37,7 +37,7 @@
         </nav>
       </section>
 
-      <section class="speakers-container section">
+      <section id="speaker-js" class="speakers-container section">
         <nav class="ws-side-nav">
           <a href="https://www.eventbrite.ca/e/touchpoint-2020-tickets-89368129481" class="side-nav-item">purchase tickets</a>
           <a href="https://forms.gle/kKdhqi6xTmbbQiF88" class="side-nav-item">apply for interviews</a>
@@ -96,9 +96,6 @@
   <script>window.jQuery || document.write('<script src="js/vendor/jquery-3.4.1.min.js"><\/script>')</script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.1.1/gsap.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.1.1/ScrollToPlugin.min.js"></script>
-  <script src="http://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/ScrollMagic.min.js"></script>
-  <script src="http://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/plugins/animation.gsap.js"></script>
-  <scrip src="http://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/plugins/debug.addIndicators.js"></script>
   <script src="js/main.js"></script>
   <!-- Google Analytics: TODO change UA-XXXXX-Y to be your site's ID. -->
   <script>
