--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
           </div>
           <div id="allpurpose" class="speaker-box">
             <p class="subtitle">Edwy Woo, Elan Asselstine, & Hugh Knapp</p>
-            <h2 class="title">All Purpose Studio</h2>
+            <h2 class="title">All Purpose</h2>
           </div>
           <div id="everyday" class="speaker-box">
             <p class="subtitle">Will Odom</p>
@@ -80,6 +80,23 @@
           </div>
         </div>
         <div class="photo-area">
+          <div id="schedule-box" class="schedule-container">
+            <h3>Touchpoint2020 Schedule</h3>
+            <div class="schedule">
+              <span class="schedule-item"><p class="item-header">Doors Open</p><p class="item-time">09:30 </p></span>
+              <span class="schedule-item"><p class="item-header">Intro / Welcome</p><p class="item-time">10:00</p></span>
+              <span class="schedule-item"><p class="item-header">Telus</p><p class="item-time">10:20</p></span>
+              <span class="schedule-item"><p class="item-header">Every Day Studio</p><p class="item-time">10:50</p></span>
+              <span class="schedule-item"><p class="item-header">Engine Digital</p><p class="item-time">11:20</p></span>
+              <span class="schedule-item"><p class="item-header">FIRST PANEL</p><p class="item-time">11:40</p></span>
+              <span class="schedule-item gap-item"><p class="item-header">LUNCH </p><p class="item-time">12:00</p></span>
+              <span class="schedule-item"><p class="item-header">Dossier</p><p class="item-time">01:00</p></span>
+              <span class="schedule-item"><p class="item-header">All Purpose</p><p class="item-time">01:30</p></span>
+              <span class="schedule-item"><p class="item-header">Asana</p><p class="item-time">02:00</p></span>
+              <span class="schedule-item"><p class="item-header">SECOND PANEL</p><p class="item-time">02:30</p></span>
+              <span class="schedule-item"><p class="item-header">Closing Remarks</p><p class="item-time">03:00</p></span>
+            </div>
+          </div>
           <img class="hidden speaker-img dossier-img" src="assets/imgs/Dossier.png"></img>
           <img class="hidden speaker-img engine-img" src="assets/imgs/engine.png"></img>
           <img class="hidden speaker-img telus-img" src="assets/imgs/telus.png"></img>
