Mobile only functions for resize (css based)

--- a/index.html
+++ b/index.html
@@ -81,19 +81,19 @@
         </div>
         <div class="photo-area">
           <div id="schedule-box" class="schedule-container">
-            <h3>Touchpoint2020 Schedule</h3>
+            <h3>Touchpoint 2020 Schedule</h3>
             <div class="schedule">
               <span class="schedule-item"><p class="item-header">Doors Open</p><p class="item-time">09:30 </p></span>
               <span class="schedule-item"><p class="item-header">Intro / Welcome</p><p class="item-time">10:00</p></span>
               <span class="schedule-item"><p class="item-header">Telus</p><p class="item-time">10:20</p></span>
               <span class="schedule-item"><p class="item-header">Every Day Studio</p><p class="item-time">10:50</p></span>
               <span class="schedule-item"><p class="item-header">Engine Digital</p><p class="item-time">11:20</p></span>
-              <span class="schedule-item"><p class="item-header">FIRST PANEL</p><p class="item-time">11:40</p></span>
-              <span class="schedule-item gap-item"><p class="item-header">LUNCH </p><p class="item-time">12:00</p></span>
+              <span class="schedule-item"><p class="item-header strong">First Panel Session</p><p class="item-time">11:40</p></span>
+              <span class="schedule-item gap-item"><p class="item-header strong">Lunch </p><p class="item-time">12:00</p></span>
               <span class="schedule-item"><p class="item-header">Dossier</p><p class="item-time">01:00</p></span>
               <span class="schedule-item"><p class="item-header">All Purpose</p><p class="item-time">01:30</p></span>
               <span class="schedule-item"><p class="item-header">Asana</p><p class="item-time">02:00</p></span>
-              <span class="schedule-item"><p class="item-header">SECOND PANEL</p><p class="item-time">02:30</p></span>
+              <span class="schedule-item"><p class="item-header strong">Second Panel Session</p><p class="item-time">02:30</p></span>
               <span class="schedule-item"><p class="item-header">Closing Remarks</p><p class="item-time">03:00</p></span>
             </div>
           </div>
