Form added, commented out until the copy is approved

--- a/index.html
+++ b/index.html
@@ -33,16 +33,18 @@
         <nav id="mobile-nav">
           <a href="https://www.eventbrite.ca/e/touchpoint-2020-tickets-89368129481"><p>Tickets</p></a>
           <a href="https://forms.gle/kKdhqi6xTmbbQiF88"><p>Interviews</p></a>
-          <a href="https://docs.google.com/forms/d/1lM9HcAlzYjvlEemEZtBmvGyXiEgek7V0r4z0nUF-Ppw"><p>Volunteer</p></a>
+          <!-- <a href="https://forms.gle/yoTzVZctf3dm4s5F7"><p>Submit Questions</p></a> -->
+          <a href="https://www.sfu.ca/idc/2019/"><p>2019</p></a>
         </nav>
       </section>
 
       <section id="speaker-js" class="speakers-container section">
         <nav class="ws-side-nav">
-          <a href="https://www.eventbrite.ca/e/touchpoint-2020-tickets-89368129481" class="side-nav-item">purchase tickets</a>
-          <a href="https://forms.gle/kKdhqi6xTmbbQiF88" class="side-nav-item">apply for interviews</a>
-          <a href="https://docs.google.com/forms/d/1lM9HcAlzYjvlEemEZtBmvGyXiEgek7V0r4z0nUF-Ppw" class="side-nav-item">volunteer</a>
           <a href="https://www.sfu.ca/idc/2019/"class="side-nav-item">2019 site</a>
+          <a href="https://docs.google.com/forms/d/1lM9HcAlzYjvlEemEZtBmvGyXiEgek7V0r4z0nUF-Ppw" class="side-nav-item">volunteer</a>
+          <a href="https://forms.gle/kKdhqi6xTmbbQiF88" class="side-nav-item">interviews</a>
+          <!-- <a href="https://forms.gle/yoTzVZctf3dm4s5F7" class="side-nav-item">submit questions</a> -->
+          <a href="https://www.eventbrite.ca/e/touchpoint-2020-tickets-89368129481" class="side-nav-item">buy tickets</a>
           <span class="side-nav-item" id="nav-icon">
             <svg width="33" height="32" viewBox="0 0 33 32" fill="none" xmlns="http://www.w3.org/2000/svg">
               <circle cx="16.184" cy="15.9252" r="15.9252" fill="#0093DA"/>
