--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
         <nav id="mobile-nav">
           <a href="https://www.eventbrite.ca/e/touchpoint-2020-tickets-89368129481"><p>Tickets</p></a>
           <a href="https://forms.gle/kKdhqi6xTmbbQiF88"><p>Interviews</p></a>
-          <!-- <a href="https://forms.gle/yoTzVZctf3dm4s5F7"><p>Submit Questions</p></a> -->
-          <a href="https://www.sfu.ca/idc/2019/"><p>2019</p></a>
+          <a href="https://forms.gle/yoTzVZctf3dm4s5F7"><p>Submit Questions</p></a>
+          <!-- <a href="https://www.sfu.ca/idc/2019/"><p>2019</p></a> -->
         </nav>
       </section>
 
@@ -43,7 +43,7 @@
           <a href="https://www.sfu.ca/idc/2019/"class="side-nav-item">2019 site</a>
           <a href="https://docs.google.com/forms/d/1lM9HcAlzYjvlEemEZtBmvGyXiEgek7V0r4z0nUF-Ppw" class="side-nav-item">volunteer</a>
           <a href="https://forms.gle/kKdhqi6xTmbbQiF88" class="side-nav-item">interviews</a>
-          <!-- <a href="https://forms.gle/yoTzVZctf3dm4s5F7" class="side-nav-item">submit questions</a> -->
+          <a href="https://forms.gle/yoTzVZctf3dm4s5F7" class="side-nav-item">submit questions</a>
           <a href="https://www.eventbrite.ca/e/touchpoint-2020-tickets-89368129481" class="side-nav-item">buy tickets</a>
           <span class="side-nav-item" id="nav-icon">
             <svg width="33" height="32" viewBox="0 0 33 32" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -85,18 +85,18 @@
           <div id="schedule-box" class="schedule-container">
             <h3>Touchpoint 2020 Schedule</h3>
             <div class="schedule">
-              <span class="schedule-item"><p class="item-header">Doors Open</p><p class="item-time">09:30 </p></span>
+              <span class="schedule-item"><p class="item-header">Doors Open</p><p class="item-time">9:30am</p></span>
               <span class="schedule-item"><p class="item-header">Intro / Welcome</p><p class="item-time">10:00</p></span>
-              <span class="schedule-item"><p class="item-header">Telus</p><p class="item-time">10:20</p></span>
+              <span class="schedule-item"><p class="item-header">Telus Digital</p><p class="item-time">10:20</p></span>
               <span class="schedule-item"><p class="item-header">Every Day Studio</p><p class="item-time">10:50</p></span>
-              <span class="schedule-item"><p class="item-header">Engine Digital</p><p class="item-time">11:20</p></span>
-              <span class="schedule-item"><p class="item-header strong">First Panel Session</p><p class="item-time">11:40</p></span>
-              <span class="schedule-item gap-item"><p class="item-header strong">Lunch </p><p class="item-time">12:00</p></span>
-              <span class="schedule-item"><p class="item-header">Dossier</p><p class="item-time">01:00</p></span>
-              <span class="schedule-item"><p class="item-header">All Purpose</p><p class="item-time">01:30</p></span>
-              <span class="schedule-item"><p class="item-header">Asana</p><p class="item-time">02:00</p></span>
-              <span class="schedule-item"><p class="item-header strong">Second Panel Session</p><p class="item-time">02:30</p></span>
-              <span class="schedule-item"><p class="item-header">Closing Remarks</p><p class="item-time">03:00</p></span>
+              <span class="schedule-item"><p class="item-header">Asana</p><p class="item-time">11:20</p></span>
+              <span class="schedule-item gap-item"><p class="item-header strong">Lunch </p><p class="item-time">11:40</p></span>
+              <span class="schedule-item"><p class="item-header">First Panel Session</p><p class="item-time">12:40pm</p></span>
+              <span class="schedule-item"><p class="item-header">Dossier</p><p class="item-time">1:00</p></span>
+              <span class="schedule-item"><p class="item-header">All Purpose</p><p class="item-time">1:30</p></span>
+              <span class="schedule-item"><p class="item-header">Engine Digital</p><p class="item-time">2:00</p></span>
+              <span class="schedule-item"><p class="item-header">Second Panel Session</p><p class="item-time">2:30</p></span>
+              <span class="schedule-item"><p class="item-header">Closing Remarks</p><p class="item-time">3:00</p></span>
             </div>
           </div>
           <img class="hidden speaker-img dossier-img" src="assets/imgs/Dossier.png"></img>
@@ -115,7 +115,8 @@
   <script>window.jQuery || document.write('<script src="js/vendor/jquery-3.4.1.min.js"><\/script>')</script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.1.1/gsap.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.1.1/ScrollToPlugin.min.js"></script>
-  <script src="js/main.js"></script>
+  <!-- <script type='text/javascript' src="js/jquery.mousewheel.min.js"></script> -->
+  <script type='text/javascript' src="js/main.js"></script>
   <!-- Google Analytics: TODO change UA-XXXXX-Y to be your site's ID. -->
   <script>
     window.ga = function () { ga.q.push(arguments) }; ga.q = []; ga.l = +new Date;
